fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Poppins', sans-serif !important;
+  overflow-x: hidden;
 }
 *{
   box-sizing: border-box;
